# chat-bot_and_Bd

./: Readme.txt
Bd/: cbr.sql
chat-bot/: chat-bot.cabal  log.txt
chat-bot/app/: Main.hs
chat-bot/src/: Db.hs
