name:                chat-bot
version:             0.1
-- synopsis:
-- description:
-- homepage:
-- license:
-- license-file:
author:              Artem
maintainer:          author@email.com
copyright:           2017 Author name here
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-type-defaults
  exposed-modules:     Db
  build-depends:       base >= 4.7 && < 5 , mysql-simple, text
  default-language:    Haskell2010
  extensions: OverloadedStrings
executable chat-bot
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , chat-bot , mysql-simple
  default-language:    Haskell2010
  extensions: OverloadedStrings
test-suite chat-bot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chat-bot , mysql-simple
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  extensions: OverloadedStrings
